cabal-version:      2.4
name:               markdown-doctest
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable markdown-doctest
    ghc-options:  -Weverything
                  -Wno-all-missed-specialisations
                  -Wno-implicit-prelude
                  -Wno-missing-import-lists
                  -Wno-missing-deriving-strategies
                  -Wno-missing-local-signatures
                  -Wno-missing-safe-haskell-mode
                  -Wno-missed-specialisations
                  -Wno-monomorphism-restriction
                  -Wno-prepositive-qualified-module
                  -Wno-unsafe
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , streamly-core
                    , ghcid
                    , temporary         >= 1.3   && < 1.4
                    , filepath          >= 1.4   && < 1.5
    hs-source-dirs:   app
    default-language: Haskell2010
